Bug 1453555: Fix accessibility group info for <select size="1"> options. r=surkov

In the e10s implementation, Accessible::NativeState for the options doesn't include the invisible state. (It does with e10s disabled.)
In HTMLSelectOptionAccessible::NativeState, rather than just flipping (xor) the invisible state, absolutely ensure it gets removed. We don't want to *add* the invisible state if it isn't there.
This allows group position info to be calculated correctly.

MozReview-Commit-ID: LPEVhOOm2NT